objects/Form_Rule_Validation_Junction__c.object
<CustomObject>
    <description>Junction object linking Form Rules with Form Validations supporting differentiated validation requirements and rules across states as well as sharing validations across states.</description>
    <fields>
        <fullName>FRMigrationID__c</fullName>
        <formula>Form_Rule__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FRMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FVMigrationID__c</fullName>
        <formula>Form_Validation__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FVMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Rule__c</fullName>
        <label>Form Rule</label>
        <referenceTo>Form_Rule__c</referenceTo>
        <relationshipLabel>Form Rule-Validation Junctions</relationshipLabel>
        <relationshipName>Form_Rule_Validation_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_Validation__c</fullName>
        <label>Form Validation</label>
        <referenceTo>Form_Validation__c</referenceTo>
        <relationshipLabel>Form Rule-Validation Junctions</relationshipLabel>
        <relationshipName>Form_Rule_Validation_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Form Rule-Validation Junction</label>
    <nameField>
        <displayFormat>FRV-{000000}</displayFormat>
        <label>Form Rule-Validation Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Rule-Validation Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>